--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+APP_SERVICE=app
+APP_PORT=8000
+AUTH_GUARD=sanctum
+
+WWWUSER=
+WWWGROUP=
+SAIL_FILES=./docker-compose-dev.yml
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
