--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
         "@vue/server-renderer": "^3.3.13",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
+        "eslint": "^8.57.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-vue": "^9.26.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
@@ -20,6 +26,10 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^2.3.1",
+        "element-plus": "^2.7.0",
+        "lodash": "^4.17.21",
+        "vue3-carousel": "^0.3.3",
         "ziggy-js": "^2.1.0"
     }
 }
