--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "element-plus": "^2.7.0",
         "lodash": "^4.17.21",
         "vue3-carousel": "^0.3.3",
+        "vue3-toastify": "^0.2.1",
         "ziggy-js": "^2.1.0"
     }
 }
