--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^10.5",
+        "psalm/plugin-laravel": "^2.11.0",
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
