--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 APP_SERVICE=app
 APP_PORT=8000
 AUTH_GUARD=sanctum
@@ -21,7 +21,7 @@ APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -33,25 +33,32 @@ DB_DATABASE=laravel
 DB_USERNAME=sail
 DB_PASSWORD=password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
+SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_CONNECTION=session
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=
+CACHE_CONNECTION=cache
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=redis
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_CACHE_CLIENT=phpredis
+REDIS_CACHE_HOST=redis-cache
+REDIS_CACHE_PASSWORD=null
+REDIS_CACHE_PORT=6379
+
+REDIS_SESSION_CLIENT=phpredis
+REDIS_SESSION_HOST=redis-session
+REDIS_SESSION_PASSWORD=null
+REDIS_SESSION_PORT=6380
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
