--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,17 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
+        "laravel/horizon": "^5.24",
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.8",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
         "meilisearch/meilisearch-php": "^1.7",
+        "opcodesio/log-viewer": "^3.10",
         "spatie/laravel-medialibrary": "^11.4",
+        "spatie/laravel-permission": "^6.7",
+        "spatie/laravel-sluggable": "^3.6",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
