--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@element-plus/icons-vue": "^2.3.1",
         "element-plus": "^2.7.0",
         "lodash": "^4.17.21",
+        "vue-lazyload": "^3.0.0",
         "vue3-carousel": "^0.3.3",
         "vue3-toastify": "^0.2.1",
         "ziggy-js": "^2.1.0"
